refactor: toList 문법 수정